--- a/platformio.ini
+++ b/platformio.ini
@@ -8,19 +8,48 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:MQTT_FEATHER_M0]
-platform = atmelsam
-board = adafruit_feather_m0
+
+;[platformio]
+
+[platformio]
+extra_configs = upload_params.ini
+
+[env:MQTT_LINKY_GAZPAR_RECV_ESP32_OTA]
+
+;extra_configs = upload_params.ini
+platform = espressif32
+board = az-delivery-devkit-v4
 framework = arduino
-upload_port = /dev/cu.usbmodem141301
-monitor_port = /dev/cu.usbmodem141301
-monitor_speed = 9600
+monitor_port = /dev/cu.usbserial-0001
+monitor_speed = 115200
 lib_deps = 
-	khoih-prog/WiFi101_Generic@^1.0.0
 	knolleary/PubSubClient@^2.8
 	adafruit/Adafruit SleepyDog Library@^1.6.3
-	hallard/LibTeleinfo@^1.1.4
-	adafruit/Adafruit HTU31D Library@^1.1.1
+	hallard/LibTeleinfo@^1.1.5
 	bblanchon/ArduinoJson@^6.19.4
-	nrf24/RF24@^1.4.5
+	nrf24/RF24@^1.4.7
 	rlogiacco/CircularBuffer@^1.3.3
+	joaolopesf/RemoteDebug@^3.0.5
+build_flags = -fpermissive -DWEBSOCKET_DISABLED 
+upload_port = 192.168.2.99
+
+[env:MQTT_LINKY_GAZPAR_RECV_ESP32_SERIAL]
+platform = espressif32
+board = az-delivery-devkit-v4
+framework = arduino
+
+;upload_port = /dev/cu.usbserial-0001
+;/upload_speed= 115200
+
+;monitor_port = /dev/cu.usbserial-0001
+;monitor_speed = 115200
+lib_deps = 
+	knolleary/PubSubClient@^2.8
+	adafruit/Adafruit SleepyDog Library@^1.6.3
+	hallard/LibTeleinfo@^1.1.5
+	bblanchon/ArduinoJson@^6.19.4
+	nrf24/RF24@^1.4.7
+	rlogiacco/CircularBuffer@^1.3.3
+	joaolopesf/RemoteDebug@^3.0.5
+build_flags = -fpermissive -DWEBSOCKET_DISABLED 
+
